k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: 781978598486.dkr.ecr.us-east-1.amazonaws.com/clouddevops-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: flask-app
            topologyKey: "kubernetes.io/hostname"
